Fix z-index of logo panel to stay on top

--- a/sass/layouts/_manage.scss
+++ b/sass/layouts/_manage.scss
@@ -318,6 +318,7 @@
     background-color: $header-background-color;
     text-align: center;
     box-shadow: 0 -2px 8px -2px rgba(0, 0, 0, 0.2);
+    z-index: 10;
 
     @media screen and (max-width: $break-s) {
       display: none;
